fix marquee to show all text on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -149,11 +149,12 @@ main .mixed-main {
   height: 200px;
   position: relative;
   overflow: hidden;
+  white-space: nowrap;
 }
 
 .marquee h2 {
   position: absolute;
-  width: 100%;
+  width: auto;
   height: 100%;
   margin: 0;
   color: #ffffff;
